url applyied and css adjustments where made

--- a/app/index.html
+++ b/app/index.html
@@ -16,11 +16,13 @@
 
 
       <section class="inner">
-        <div class="picbox"></div>
 
-        <div class="textbox"></div>
+        <div class="picbox">
+            <div class="img"></div>
+            <div class="textbox"></div>
+            <div class="ssn"></div>
+      </div>
 
-        <div class="ssn"></div>
       </section>
 
 
